refactor : 인증 정보 조회시 DTO 형태 변경